# api

./: config.json  main.py  mainA.py  pyproject.toml
controllers/: api.py
services/: db_service.py  sync_service.py
ui/: config_window.py  system_tray.py
utils/: config.py  logging_config.py
