[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pyinstaller>=6.21.0",
    "pyodbc>=5.3.0",
    "pystray>=0.19.5",
    "uvicorn>=0.49.0",
]
